localization fix/fix height when error dropdown is visible

--- a/packages/itwin/tree-widget/src/tree-widget-react/components/trees/common/components/Tree.css
+++ b/packages/itwin/tree-widget/src/tree-widget-react/components/trees/common/components/Tree.css
@@ -6,4 +6,6 @@
 .tw-tree-renderer-container {
   height: 100%;
   padding-top: var(--iui-size-xs);
+  display: flex;
+  flex-direction: column;
 }
